SP Screen ResDev (Partial)/src/objects/WorkType.object
<CustomObject>
    <fields>
        <fullName>FSL_Days_to_Due__c</fullName>
        <defaultValue>14</defaultValue>
        <label>FSL Days to Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL_Days_to_Start__c</fullName>
        <defaultValue>3</defaultValue>
        <label>FSL Days to Start</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Due_Date_Offset__c</fullName>
        <description>Minutes</description>
        <inlineHelpText>Calculates the Due Date by adding Minutes to the Service creation time, reflecting the organisation&apos;s internal SLA</inlineHelpText>
        <label>Due Date Offset</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Exact_Appointments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exact Appointments</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>All_WorkTypes</fullName>
        <filterScope>Everything</filterScope>
        <label>All Work Types</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>